[package]
name = "mini-c-parser"
version = "0.12.2"
edition = "2021"
license = "MIT"
description = "minimal C language lexer & parser & virtual executer from scratch"
repository = "https://github.com/ehwan/C-language-Parser-In-Rust"
readme = "README.md"
keywords = ["parser", "lexer", "c", "interpreter", "compiler"]
categories = ["parser-implementations", "compilers"]

[dependencies]
rusty_lr = { version = "4.2.0", features = [] }
inkwell = { version = "0.6.0", features = ["llvm14-0"] }
